47. Reduce toolbutton pop-up menu delay from 600ms to 250ms
48. Fix edit field in KDE4.3's kickoff menu.
49. Turn kwin colored shadow off by default - seems to have issues with
    KDE4.3Beta and/or Qt 4.5.1
50. Dont max round toolbar buttons.
51. Fix slight drawing glitch with Qt4.5 document mode tabs.
52. Added 'Tiny' to kwin style border options.
53. Added option to show a resize grip on kwin windows - taken from
    Bespin KWin decoration.

0.62.9
------
1. Draw correct colour for popup of combo's in toolbars.

0.62.8
------
1. Don't round KMix's popup, or the 'unlock screen' dialog.

0.62.7
------
1. Dont draw hover for disabled listviews.
2. Stop animating progressbars when they reach max value.
3. Fix 'bleeding' of Arora's progressbar.
4. Don't round Arora's location bar popup.

0.62.6
------
1. Increase menubar item height by 1 pixel - seems to align better
   with Gtk2.
2. Improve look of comboboxes in Qt4 printer properties dialog listview.
3. Provide initial support for Bespin's XBar - disabled by default. To enable,
   call cmake with -DQTC_XBAR_SUPPORT=true
4. Draw popup menu title text!
5. Allow ability to specify if titlebar center alignment is for the full window
   width, or just the text area.
6. Fix weird highlighting behaviour in QtWebKit text edit fields.
7. Fix position of toolbar icons in Arora.
8. Fix disabled tabs.

0.62.5
------
1. Use gradient for filled slider - unless appearance is flat/raised.
2. Reduce the amount of size adjustment to menubar items when toolbar
   borders are set.
3. Fix vertical toolbar borders.
4. Slightly alter listview header size.
5. Actually include the KWin titlebar alignment code!!!
6. Adjust tab widget scroll buttons slightly.
7. Fix crash with some pure Qt4 apps.

0.62.4
------
1. When drawing filled slider groove, use fill colour for border as well.
2. Better positioning of V arrows on secondary scrollbar buttons.

0.62.3
------
1. Dont draw focus for combobox listviews.