@@ -50,6 +50,7 @@ QtCurveKWinConfig::QtCurveKWinConfig(KConfig *config, QWidget *parent)
     connect(itsWidget->menuClose, SIGNAL(toggled(bool)),  this, SIGNAL(changed()));
     connect(itsWidget->coloredShadow, SIGNAL(toggled(bool)), this, SIGNAL(changed()));
     connect(itsWidget->resizeGrip, SIGNAL(toggled(bool)), this, SIGNAL(changed()));
+    connect(itsWidget->roundBottom, SIGNAL(toggled(bool)), this, SIGNAL(changed()));
 }
 
 QtCurveKWinConfig::~QtCurveKWinConfig()
@@ -65,6 +66,7 @@ void QtCurveKWinConfig::load(const KConfigGroup &)
     itsWidget->menuClose->setChecked(configGroup.readEntry("CloseOnMenuDoubleClick", true));
     itsWidget->coloredShadow->setChecked(configGroup.readEntry("ColoredShadow", false));
     itsWidget->resizeGrip->setChecked(configGroup.readEntry("ShowResizeGrip", false));
+    itsWidget->roundBottom->setChecked(configGroup.readEntry("RoundBottom", true));
 }
 
 void QtCurveKWinConfig::save(KConfigGroup &)
@@ -74,6 +76,7 @@ void QtCurveKWinConfig::save(KConfigGroup &)
     configGroup.writeEntry("CloseOnMenuDoubleClick", itsWidget->menuClose->isChecked());
     configGroup.writeEntry("ColoredShadow", itsWidget->coloredShadow->isChecked());
     configGroup.writeEntry("ShowResizeGrip", itsWidget->resizeGrip->isChecked());
+    configGroup.writeEntry("RoundBottom", itsWidget->roundBottom->isChecked());
     itsConfig->sync();
 }
 
@@ -82,6 +85,7 @@ void QtCurveKWinConfig::defaults()
     itsWidget->menuClose->setChecked(true);
     itsWidget->coloredShadow->setChecked(false);
     itsWidget->resizeGrip->setChecked(false);
+    itsWidget->roundBottom->setChecked(true);
 }
 
 extern "C"
