@@ -39,6 +39,13 @@
     </widget>
    </item>
    <item>
+    <widget class="QCheckBox" name="roundBottom">
+     <property name="text">
+      <string>Round bottom corners (applies only when style is round, and borders are not tiny)</string>
+     </property>
+    </widget>
+   </item>
+   <item>
     <spacer name="verticalSpacer">
      <property name="orientation">
       <enum>Qt::Vertical</enum>
